@@ -1,181 +1,267 @@
 package com.soaengry.moment.domain.wedding.service;
 
-import com.soaengry.moment.domain.user.entity.User;
+import com.soaengry.moment.domain.event.entity.Event;
+import com.soaengry.moment.domain.event.exception.EventErrorCode;
+import com.soaengry.moment.domain.event.exception.EventException;
+import com.soaengry.moment.domain.event.repository.EventRepository;
 import com.soaengry.moment.domain.user.repository.UserRepository;
-import com.soaengry.moment.domain.wedding.dto.request.WeddingRequest;
+import com.soaengry.moment.domain.wedding.dto.request.*;
 import com.soaengry.moment.domain.wedding.dto.response.*;
 import com.soaengry.moment.domain.wedding.entity.*;
 import com.soaengry.moment.domain.wedding.exception.WeddingErrorCode;
 import com.soaengry.moment.domain.wedding.exception.WeddingException;
 import com.soaengry.moment.domain.wedding.repository.*;
-import com.soaengry.moment.global.service.KakaoGeocodingService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Transactional
 public class WeddingService {
 
+    private static final int MAX_ACCOUNT_GROUPS = 4;
+    private static final int MAX_ACCOUNTS_PER_GROUP = 3;
+
     private final WeddingRepository weddingRepository;
-    private final CoupleRepository coupleRepository;
+    private final HostRepository hostRepository;
     private final ScheduleRepository scheduleRepository;
     private final AccountGroupRepository accountGroupRepository;
     private final AccountRepository accountRepository;
-    private final GalleryRepository galleryRepository;
-    private final TransportationRepository transportationRepository;
-    private final AccommodationRepository accommodationRepository;
-    private final AnnouncementRepository announcementRepository;
-    private final KakaoGeocodingService kakaoGeocodingService;
+    private final EventRepository eventRepository;
     private final UserRepository userRepository;
 
-    private KakaoGeocodingService.Coordinate resolveCoordinate(String address) {
-        KakaoGeocodingService.Coordinate coord = kakaoGeocodingService.geocode(address);
-        if (coord == null) {
-            throw new WeddingException(WeddingErrorCode.GEOCODING_FAILED);
+    private Wedding validateAndGetWedding(Long weddingId, Long userId) {
+        Wedding wedding = weddingRepository.findById(weddingId)
+                .orElseThrow(() -> new WeddingException(WeddingErrorCode.WEDDING_NOT_FOUND));
+        if (!wedding.getEvent().getUserId().equals(userId)) {
+            throw new WeddingException(WeddingErrorCode.WEDDING_UNAUTHORIZED);
         }
-        return coord;
+        return wedding;
     }
 
-    /**
-     * 웨딩 접근 권한 검증: ADMIN이거나 해당 웨딩의 커플(이메일 매칭)이면 통과
-     */
-    public void validateWeddingAccess(Long weddingId, Long userId) {
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new WeddingException(WeddingErrorCode.WEDDING_UNAUTHORIZED));
-
-        if (user.getRole() == User.Role.ADMIN) {
-            return;
+    private Event validateAndGetEvent(Long eventId, Long userId) {
+        Event event = eventRepository.findById(eventId)
+                .orElseThrow(() -> new EventException(EventErrorCode.EVENT_NOT_FOUND));
+        if (!event.getUserId().equals(userId)) {
+            throw new EventException(EventErrorCode.EVENT_UNAUTHORIZED);
         }
-
-        if (coupleRepository.existsByWeddingIdAndEmail(weddingId, user.getEmail())) {
-            return;
-        }
-
-        throw new WeddingException(WeddingErrorCode.WEDDING_UNAUTHORIZED);
+        return event;
     }
 
-    /**
-     * Couple의 이메일로 User를 조회하여 userId 반환
-     */
-    public Long resolveCoupleUserId(String email) {
+    private Long resolveUserIdByEmail(String email) {
         return userRepository.findByEmail(email)
-                .map(User::getId)
+                .map(u -> u.getId())
                 .orElse(null);
     }
 
-    @Transactional
-    public WeddingResponse createWedding(WeddingRequest request) {
-        KakaoGeocodingService.Coordinate coord = resolveCoordinate(request.venueAddress());
-        Wedding wedding = request.toEntity(coord.lat(), coord.lng());
-        Wedding saved = weddingRepository.save(wedding);
-        return WeddingResponse.from(saved);
+    // ?�?�?� Wedding CRUD ?�?�?�
+
+    public WeddingResponse createWedding(Long userId, WeddingRequest request) {
+        Event event = eventRepository.findById(request.eventId())
+                .orElseThrow(() -> new EventException(EventErrorCode.EVENT_NOT_FOUND));
+        if (!event.getUserId().equals(userId)) {
+            throw new EventException(EventErrorCode.EVENT_UNAUTHORIZED);
+        }
+        Wedding wedding = Wedding.builder()
+                .event(event)
+                .notice(request.notice())
+                .parkingInfo(request.parkingInfo())
+                .mealInfo(request.mealInfo())
+                .greeting(request.greeting())
+                .build();
+        return WeddingResponse.from(weddingRepository.save(wedding));
     }
 
+    @Transactional(readOnly = true)
     public WeddingResponse getWedding(Long weddingId) {
         Wedding wedding = weddingRepository.findById(weddingId)
                 .orElseThrow(() -> new WeddingException(WeddingErrorCode.WEDDING_NOT_FOUND));
         return WeddingResponse.from(wedding);
     }
 
-    @Transactional
-    public WeddingResponse updateWedding(Long weddingId, Long userId, WeddingRequest request) {
-        validateWeddingAccess(weddingId, userId);
-
-        Wedding wedding = weddingRepository.findById(weddingId)
+    @Transactional(readOnly = true)
+    public WeddingResponse getWeddingByEventId(Long eventId) {
+        Wedding wedding = weddingRepository.findByEventId(eventId)
                 .orElseThrow(() -> new WeddingException(WeddingErrorCode.WEDDING_NOT_FOUND));
-
-        KakaoGeocodingService.Coordinate coord = resolveCoordinate(request.venueAddress());
-
-        wedding.updateTitle(request.title());
-        wedding.updateWeddingDate(request.weddingDate());
-        wedding.updateVenue(
-                request.venueName(),
-                request.venueAddress(),
-                request.venueDetail(),
-                coord.lat(),
-                coord.lng(),
-                request.venuePhone());
-        wedding.updateDressCode(request.dressCode());
-        wedding.updateNotice(request.notice());
-        wedding.updateParkingInfo(request.parkingInfo());
-        wedding.updateMealInfo(request.mealInfo());
-
         return WeddingResponse.from(wedding);
     }
 
-    @Transactional
-    public void deleteWedding(Long weddingId, Long userId) {
-        validateWeddingAccess(weddingId, userId);
-
-        if (!weddingRepository.existsById(weddingId)) {
-            throw new WeddingException(WeddingErrorCode.WEDDING_NOT_FOUND);
-        }
-        weddingRepository.deleteById(weddingId);
+    public WeddingResponse updateWedding(Long weddingId, Long userId, WeddingRequest request) {
+        Wedding wedding = validateAndGetWedding(weddingId, userId);
+        wedding.update(request.notice(), request.parkingInfo(), request.mealInfo(), request.greeting());
+        return WeddingResponse.from(wedding);
     }
 
     @Transactional(readOnly = true)
-    public boolean checkInvitationIdExists(String invitationId) {
-        return weddingRepository.existsByInvitationId(invitationId);
-    }
-
-    // 전체 정보 조회
-    public WeddingInfoResponse getWeddingInfo(String invitationId) {
-        Wedding entity = weddingRepository.findByInvitationId(invitationId)
+    public WeddingInfoResponse getWeddingInfo(Long weddingId) {
+        Wedding wedding = weddingRepository.findById(weddingId)
                 .orElseThrow(() -> new WeddingException(WeddingErrorCode.WEDDING_NOT_FOUND));
-        Long weddingId = entity.getId();
+        Long eventId = wedding.getEvent().getId();
 
-        WeddingResponse wedding = WeddingResponse.from(entity);
-
-        List<CoupleResponse> couples = coupleRepository.findByWeddingIdOrderByRole(weddingId).stream()
-                .map(couple -> CoupleResponse.from(couple, resolveCoupleUserId(couple.getEmail())))
-                .collect(Collectors.toList());
+        List<HostResponse> hosts = hostRepository.findByEventIdOrderByRole(eventId).stream()
+                .map(h -> HostResponse.from(h, resolveUserIdByEmail(h.getEmail())))
+                .toList();
 
         List<ScheduleResponse> schedules = scheduleRepository.findByWeddingIdOrderByOrderIndex(weddingId).stream()
                 .map(ScheduleResponse::from)
-                .collect(Collectors.toList());
+                .toList();
 
-        List<AccountGroupResponse> accountGroups = accountGroupRepository.findByWeddingIdOrderByOrderIndex(weddingId).stream()
-                .map(AccountGroupResponse::from)
-                .collect(Collectors.toList());
-
-        List<AccountGroupWithAccountsResponse> accountGroupsWithAccounts = accountGroups.stream()
+        List<AccountGroupWithAccountsResponse> accountGroups = accountGroupRepository
+                .findByWeddingIdOrderByOrderIndex(weddingId).stream()
                 .map(group -> {
-                    List<AccountResponse> accounts = accountRepository.findByAccountGroupIdOrderByOrderIndex(group.id()).stream()
+                    AccountGroupResponse groupResponse = AccountGroupResponse.from(group);
+                    List<AccountResponse> accounts = accountRepository
+                            .findByAccountGroupIdOrderByOrderIndex(group.getId()).stream()
                             .map(AccountResponse::from)
-                            .collect(Collectors.toList());
-                    return AccountGroupWithAccountsResponse.of(group, accounts);
+                            .toList();
+                    return AccountGroupWithAccountsResponse.of(groupResponse, accounts);
                 })
-                .collect(Collectors.toList());
+                .toList();
 
-        List<GalleryResponse> gallery = galleryRepository.findByWeddingIdOrderByOrderIndex(weddingId).stream()
-                .map(GalleryResponse::from)
-                .collect(Collectors.toList());
+        return new WeddingInfoResponse(WeddingResponse.from(wedding), hosts, schedules, accountGroups);
+    }
 
-        List<TransportationResponse> transportation = transportationRepository.findByWeddingIdOrderByOrderIndex(weddingId).stream()
-                .map(TransportationResponse::from)
-                .collect(Collectors.toList());
+    // ?�?�?� Host ?�?�?�
 
-        List<AccommodationResponse> accommodation = accommodationRepository.findByWeddingIdOrderByOrderIndex(weddingId).stream()
-                .map(AccommodationResponse::from)
-                .collect(Collectors.toList());
+    public HostResponse createHost(Long eventId, Long userId, HostRequest request) {
+        validateAndGetEvent(eventId, userId);
+        Host host = request.toEntity(eventId);
+        Host saved = hostRepository.save(host);
+        return HostResponse.from(saved, resolveUserIdByEmail(saved.getEmail()));
+    }
 
-        List<AnnouncementResponse> announcements = announcementRepository.findByWeddingIdOrderByIsPinnedDescCreatedAtDesc(weddingId).stream()
-                .map(AnnouncementResponse::from)
-                .collect(Collectors.toList());
+    @Transactional(readOnly = true)
+    public List<HostResponse> getHosts(Long eventId) {
+        return hostRepository.findByEventIdOrderByRole(eventId).stream()
+                .map(h -> HostResponse.from(h, resolveUserIdByEmail(h.getEmail())))
+                .toList();
+    }
 
-        return WeddingInfoResponse.of(
-                wedding,
-                couples,
-                schedules,
-                accountGroupsWithAccounts,
-                gallery,
-                transportation,
-                accommodation,
-                announcements
-        );
+    public HostResponse updateHost(Long hostId, Long userId, HostRequest request) {
+        Host host = hostRepository.findById(hostId)
+                .orElseThrow(() -> new WeddingException(WeddingErrorCode.HOST_NOT_FOUND));
+        validateAndGetEvent(host.getEventId(), userId);
+        host.updateName(request.name());
+        host.updateFather(request.fatherName(), request.isFatherAlive());
+        host.updateMother(request.motherName(), request.isMotherAlive());
+        host.updateContact(request.contact());
+        host.updateProfileImageUrl(request.profileImageUrl());
+        host.updateIntroduction(request.introduction());
+        return HostResponse.from(host, resolveUserIdByEmail(host.getEmail()));
+    }
+
+    public void deleteHost(Long hostId, Long userId) {
+        Host host = hostRepository.findById(hostId)
+                .orElseThrow(() -> new WeddingException(WeddingErrorCode.HOST_NOT_FOUND));
+        validateAndGetEvent(host.getEventId(), userId);
+        hostRepository.deleteById(hostId);
+    }
+
+    // ?�?�?� Schedule ?�?�?�
+
+    public ScheduleResponse createSchedule(Long weddingId, Long userId, ScheduleRequest request) {
+        validateAndGetWedding(weddingId, userId);
+        Schedule saved = scheduleRepository.save(request.toEntity(weddingId));
+        return ScheduleResponse.from(saved);
+    }
+
+    @Transactional(readOnly = true)
+    public List<ScheduleResponse> getSchedules(Long weddingId) {
+        return scheduleRepository.findByWeddingIdOrderByOrderIndex(weddingId).stream()
+                .map(ScheduleResponse::from)
+                .toList();
+    }
+
+    public ScheduleResponse updateSchedule(Long scheduleId, Long userId, ScheduleRequest request) {
+        Schedule schedule = scheduleRepository.findById(scheduleId)
+                .orElseThrow(() -> new WeddingException(WeddingErrorCode.SCHEDULE_NOT_FOUND));
+        validateAndGetWedding(schedule.getWeddingId(), userId);
+        schedule.update(request.time(), request.title(), request.description(), request.orderIndex());
+        return ScheduleResponse.from(schedule);
+    }
+
+    public void deleteSchedule(Long scheduleId, Long userId) {
+        Schedule schedule = scheduleRepository.findById(scheduleId)
+                .orElseThrow(() -> new WeddingException(WeddingErrorCode.SCHEDULE_NOT_FOUND));
+        validateAndGetWedding(schedule.getWeddingId(), userId);
+        scheduleRepository.deleteById(scheduleId);
+    }
+
+    // ?�?�?� AccountGroup ?�?�?�
+
+    public AccountGroupResponse createAccountGroup(Long weddingId, Long userId, AccountGroupRequest request) {
+        validateAndGetWedding(weddingId, userId);
+        long count = accountGroupRepository.countByWeddingIdForUpdate(weddingId);
+        if (count >= MAX_ACCOUNT_GROUPS) {
+            throw new WeddingException(WeddingErrorCode.ACCOUNT_GROUP_LIMIT_EXCEEDED);
+        }
+        AccountGroup saved = accountGroupRepository.save(request.toEntity(weddingId));
+        return AccountGroupResponse.from(saved);
+    }
+
+    @Transactional(readOnly = true)
+    public List<AccountGroupResponse> getAccountGroups(Long weddingId) {
+        return accountGroupRepository.findByWeddingIdOrderByOrderIndex(weddingId).stream()
+                .map(AccountGroupResponse::from)
+                .toList();
+    }
+
+    public AccountGroupResponse updateAccountGroup(Long groupId, Long userId, AccountGroupRequest request) {
+        AccountGroup group = accountGroupRepository.findById(groupId)
+                .orElseThrow(() -> new WeddingException(WeddingErrorCode.ACCOUNT_GROUP_NOT_FOUND));
+        validateAndGetWedding(group.getWeddingId(), userId);
+        group.update(request.groupName(), request.orderIndex());
+        return AccountGroupResponse.from(group);
+    }
+
+    public void deleteAccountGroup(Long groupId, Long userId) {
+        AccountGroup group = accountGroupRepository.findById(groupId)
+                .orElseThrow(() -> new WeddingException(WeddingErrorCode.ACCOUNT_GROUP_NOT_FOUND));
+        validateAndGetWedding(group.getWeddingId(), userId);
+        accountGroupRepository.deleteById(groupId);
+    }
+
+    // ?�?�?� Account ?�?�?�
+
+    public AccountResponse createAccount(Long groupId, Long userId, AccountRequest request) {
+        AccountGroup group = accountGroupRepository.findById(groupId)
+                .orElseThrow(() -> new WeddingException(WeddingErrorCode.ACCOUNT_GROUP_NOT_FOUND));
+        validateAndGetWedding(group.getWeddingId(), userId);
+        long count = accountRepository.countByAccountGroupIdForUpdate(groupId);
+        if (count >= MAX_ACCOUNTS_PER_GROUP) {
+            throw new WeddingException(WeddingErrorCode.ACCOUNT_LIMIT_EXCEEDED);
+        }
+        Account saved = accountRepository.save(request.toEntity(groupId));
+        return AccountResponse.from(saved);
+    }
+
+    @Transactional(readOnly = true)
+    public List<AccountResponse> getAccounts(Long groupId) {
+        return accountRepository.findByAccountGroupIdOrderByOrderIndex(groupId).stream()
+                .map(AccountResponse::from)
+                .toList();
+    }
+
+    public AccountResponse updateAccount(Long accountId, Long userId, AccountRequest request) {
+        Account account = accountRepository.findById(accountId)
+                .orElseThrow(() -> new WeddingException(WeddingErrorCode.ACCOUNT_NOT_FOUND));
+        AccountGroup group = accountGroupRepository.findById(account.getAccountGroupId())
+                .orElseThrow(() -> new WeddingException(WeddingErrorCode.ACCOUNT_GROUP_NOT_FOUND));
+        validateAndGetWedding(group.getWeddingId(), userId);
+        account.update(request.bankName(), request.bankCode(), request.accountNumber(),
+                request.accountHolder(), request.kakaoPayUrl(), request.orderIndex());
+        return AccountResponse.from(account);
+    }
+
+    public void deleteAccount(Long accountId, Long userId) {
+        Account account = accountRepository.findById(accountId)
+                .orElseThrow(() -> new WeddingException(WeddingErrorCode.ACCOUNT_NOT_FOUND));
+        AccountGroup group = accountGroupRepository.findById(account.getAccountGroupId())
+                .orElseThrow(() -> new WeddingException(WeddingErrorCode.ACCOUNT_GROUP_NOT_FOUND));
+        validateAndGetWedding(group.getWeddingId(), userId);
+        accountRepository.deleteById(accountId);
     }
 }
